// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article SEO renders correctly 1`] = `
<html>
  <head>
    <title>
      Article Page Title
    </title>
    <meta
      content="index,follow"
      data-rh="true"
      name="robots"
    />
    <meta
      content="index,follow"
      data-rh="true"
      name="googlebot"
    />
    <meta
      content="Description of article page"
      data-rh="true"
      name="description"
    />
    <meta
      content="summary_large_image"
      data-rh="true"
      name="twitter:card"
    />
    <meta
      content="@site"
      data-rh="true"
      name="twitter:site"
    />
    <meta
      content="@handle"
      data-rh="true"
      name="twitter:creator"
    />
    <meta
      content="https://www.example.com/articles/article-title"
      data-rh="true"
      property="og:url"
    />
    <meta
      content="article"
      data-rh="true"
      property="og:type"
    />
    <meta
      content="2017-06-21T23:04:13Z"
      data-rh="true"
      property="article:published_time"
    />
    <meta
      content="2018-01-21T18:04:43Z"
      data-rh="true"
      property="article:modified_time"
    />
    <meta
      content="2022-12-21T22:04:11Z"
      data-rh="true"
      property="article:expiration_time"
    />
    <meta
      content="https://www.example.com/authors/@firstnameA-lastnameA"
      data-rh="true"
      property="article:author"
    />
    <meta
      content="https://www.example.com/authors/@firstnameB-lastnameB"
      data-rh="true"
      property="article:author"
    />
    <meta
      content="Section II"
      data-rh="true"
      property="article:section"
    />
    <meta
      content="Tag A"
      data-rh="true"
      property="article:tag"
    />
    <meta
      content="Tag B"
      data-rh="true"
      property="article:tag"
    />
    <meta
      content="Open Graph Article Title"
      data-rh="true"
      property="og:title"
    />
    <meta
      content="Description of open graph article"
      data-rh="true"
      property="og:description"
    />
    <meta
      content="https://www.test.ie/og-image-article-title-01.jpg"
      data-rh="true"
      property="og:image"
    />
    <meta
      content="Og Image Alt Article Title A"
      data-rh="true"
      property="og:image:alt"
    />
    <meta
      content="850"
      data-rh="true"
      property="og:image:width"
    />
    <meta
      content="650"
      data-rh="true"
      property="og:image:height"
    />
    <meta
      content="https://www.test.ie/og-image-article-title-02.jpg"
      data-rh="true"
      property="og:image"
    />
    <meta
      content="Og Image Alt Article Title B"
      data-rh="true"
      property="og:image:alt"
    />
    <meta
      content="950"
      data-rh="true"
      property="og:image:width"
    />
    <meta
      content="850"
      data-rh="true"
      property="og:image:height"
    />
    <meta
      content="SiteName"
      data-rh="true"
      property="og:site_name"
    />
  </head>
  <body>
    <div />
  </body>
</html>
`;

exports[`Book SEO renders correctly 1`] = `
<html>
  <head>
    <title>
      Book Page Title
    </title>
    <meta
      content="index,follow"
      data-rh="true"
      name="robots"
    />
    <meta
      content="index,follow"
      data-rh="true"
      name="googlebot"
    />
    <meta
      content="Description of book page"
      data-rh="true"
      name="description"
    />
    <meta
      content="summary_large_image"
      data-rh="true"
      name="twitter:card"
    />
    <meta
      content="@site"
      data-rh="true"
      name="twitter:site"
    />
    <meta
      content="@handle"
      data-rh="true"
      name="twitter:creator"
    />
    <meta
      content="https://www.example.com/books/book-title"
      data-rh="true"
      property="og:url"
    />
    <meta
      content="book"
      data-rh="true"
      property="og:type"
    />
    <meta
      content="https://www.example.com/authors/@firstnameA-lastnameA"
      data-rh="true"
      property="book:author"
    />
    <meta
      content="https://www.example.com/authors/@firstnameB-lastnameB"
      data-rh="true"
      property="book:author"
    />
    <meta
      content="978-3-16-148410-0"
      data-rh="true"
      property="book:isbn"
    />
    <meta
      content="2018-09-17T11:08:13Z"
      data-rh="true"
      property="book:release_date"
    />
    <meta
      content="Tag A"
      data-rh="true"
      property="book:tag"
    />
    <meta
      content="Tag B"
      data-rh="true"
      property="book:tag"
    />
    <meta
      content="Open Graph Book Title"
      data-rh="true"
      property="og:title"
    />
    <meta
      content="Description of open graph book"
      data-rh="true"
      property="og:description"
    />
    <meta
      content="https://www.test.ie/og-image-book-title-01.jpg"
      data-rh="true"
      property="og:image"
    />
    <meta
      content="Og Image Alt Book Title A"
      data-rh="true"
      property="og:image:alt"
    />
    <meta
      content="850"
      data-rh="true"
      property="og:image:width"
    />
    <meta
      content="650"
      data-rh="true"
      property="og:image:height"
    />
    <meta
      content="https://www.test.ie/og-image-book-title-02.jpg"
      data-rh="true"
      property="og:image"
    />
    <meta
      content="Og Image Alt Book Title B"
      data-rh="true"
      property="og:image:alt"
    />
    <meta
      content="950"
      data-rh="true"
      property="og:image:width"
    />
    <meta
      content="850"
      data-rh="true"
      property="og:image:height"
    />
    <meta
      content="SiteName"
      data-rh="true"
      property="og:site_name"
    />
  </head>
  <body>
    <div />
  </body>
</html>
`;

exports[`Profile SEO renders correctly 1`] = `
<html>
  <head>
    <title>
      Profile Page Title
    </title>
    <meta
      content="index,follow"
      data-rh="true"
      name="robots"
    />
    <meta
      content="index,follow"
      data-rh="true"
      name="googlebot"
    />
    <meta
      content="Description of profile page"
      data-rh="true"
      name="description"
    />
    <meta
      content="summary_large_image"
      data-rh="true"
      name="twitter:card"
    />
    <meta
      content="@site"
      data-rh="true"
      name="twitter:site"
    />
    <meta
      content="@handle"
      data-rh="true"
      name="twitter:creator"
    />
    <meta
      content="https://www.example.com/@firstlast123"
      data-rh="true"
      property="og:url"
    />
    <meta
      content="profile"
      data-rh="true"
      property="og:type"
    />
    <meta
      content="First"
      data-rh="true"
      property="profile:first_name"
    />
    <meta
      content="Last"
      data-rh="true"
      property="profile:last_name"
    />
    <meta
      content="firstlast123"
      data-rh="true"
      property="profile:username"
    />
    <meta
      content="male"
      data-rh="true"
      property="profile:gender"
    />
    <meta
      content="Open Graph Profile Title"
      data-rh="true"
      property="og:title"
    />
    <meta
      content="Description of open graph profile"
      data-rh="true"
      property="og:description"
    />
    <meta
      content="https://www.test.ie/og-image-firstlast123-01.jpg"
      data-rh="true"
      property="og:image"
    />
    <meta
      content="Og Image Alt firstlast123 A"
      data-rh="true"
      property="og:image:alt"
    />
    <meta
      content="850"
      data-rh="true"
      property="og:image:width"
    />
    <meta
      content="650"
      data-rh="true"
      property="og:image:height"
    />
    <meta
      content="https://www.test.ie/og-image-firstlast123-02.jpg"
      data-rh="true"
      property="og:image"
    />
    <meta
      content="Og Image Alt firstlast123 B"
      data-rh="true"
      property="og:image:alt"
    />
    <meta
      content="950"
      data-rh="true"
      property="og:image:width"
    />
    <meta
      content="850"
      data-rh="true"
      property="og:image:height"
    />
    <meta
      content="SiteName"
      data-rh="true"
      property="og:site_name"
    />
  </head>
  <body>
    <div />
  </body>
</html>
`;

exports[`Video SEO renders correctly 1`] = `
<html>
  <head>
    <title>
      Video Page Title
    </title>
    <meta
      content="index,follow"
      data-rh="true"
      name="robots"
    />
    <meta
      content="index,follow"
      data-rh="true"
      name="googlebot"
    />
    <meta
      content="Description of video page"
      data-rh="true"
      name="description"
    />
    <meta
      content="summary_large_image"
      data-rh="true"
      name="twitter:card"
    />
    <meta
      content="@site"
      data-rh="true"
      name="twitter:site"
    />
    <meta
      content="@handle"
      data-rh="true"
      name="twitter:creator"
    />
    <meta
      content="https://www.example.com/videos/video-title"
      data-rh="true"
      property="og:url"
    />
    <meta
      content="video.movie"
      data-rh="true"
      property="og:type"
    />
    <meta
      content="https://www.example.com/actors/@firstnameA-lastnameA"
      data-rh="true"
      property="video:actor"
    />
    <meta
      content="Protagonist"
      data-rh="true"
      property="video:actor:role"
    />
    <meta
      content="https://www.example.com/actors/@firstnameB-lastnameB"
      data-rh="true"
      property="video:actor"
    />
    <meta
      content="Antagonist"
      data-rh="true"
      property="video:actor:role"
    />
    <meta
      content="https://www.example.com/directors/@firstnameA-lastnameA"
      data-rh="true"
      property="video:director"
    />
    <meta
      content="https://www.example.com/directors/@firstnameB-lastnameB"
      data-rh="true"
      property="video:director"
    />
    <meta
      content="https://www.example.com/writers/@firstnameA-lastnameA"
      data-rh="true"
      property="video:writer"
    />
    <meta
      content="https://www.example.com/writers/@firstnameB-lastnameB"
      data-rh="true"
      property="video:writer"
    />
    <meta
      content="680000"
      data-rh="true"
      property="video:duration"
    />
    <meta
      content="2022-12-21T22:04:11Z"
      data-rh="true"
      property="video:release_date"
    />
    <meta
      content="Tag A"
      data-rh="true"
      property="video:tag"
    />
    <meta
      content="Tag B"
      data-rh="true"
      property="video:tag"
    />
    <meta
      content="Open Graph Video Title"
      data-rh="true"
      property="og:title"
    />
    <meta
      content="Description of open graph video"
      data-rh="true"
      property="og:description"
    />
    <meta
      content="https://www.test.ie/og-image-video-title-01.jpg"
      data-rh="true"
      property="og:image"
    />
    <meta
      content="Og Image Alt Video Title A"
      data-rh="true"
      property="og:image:alt"
    />
    <meta
      content="850"
      data-rh="true"
      property="og:image:width"
    />
    <meta
      content="650"
      data-rh="true"
      property="og:image:height"
    />
    <meta
      content="https://www.test.ie/og-image-video-title-02.jpg"
      data-rh="true"
      property="og:image"
    />
    <meta
      content="Og Image Alt Video Title B"
      data-rh="true"
      property="og:image:alt"
    />
    <meta
      content="950"
      data-rh="true"
      property="og:image:width"
    />
    <meta
      content="850"
      data-rh="true"
      property="og:image:height"
    />
    <meta
      content="SiteName"
      data-rh="true"
      property="og:site_name"
    />
  </head>
  <body>
    <div />
  </body>
</html>
`;

exports[`renders correctly 1`] = `
<html>
  <head>
    <title>
      This is a test title.
    </title>
    <link
      data-rh="true"
      href="https://m.canonical.ie"
      media="only screen and (max-width: 640px)"
      rel="alternate"
    />
    <link
      data-rh="true"
      href="https://www.canonical.ie/de"
      hreflang="de-AT"
      key="languageAlternate-de-AT"
      rel="alternate"
    />
    <link
      data-rh="true"
      href="https://www.canonical.ie/sk"
      hreflang="sk-SK"
      key="languageAlternate-sk-SK"
      rel="alternate"
    />
    <link
      data-rh="true"
      href="https://www.canonical.ie"
      key="canonical"
      rel="canonical"
    />
    <meta
      content="index,follow"
      data-rh="true"
      name="robots"
    />
    <meta
      content="index,follow"
      data-rh="true"
      name="googlebot"
    />
    <meta
      content="This is a test description."
      data-rh="true"
      name="description"
    />
    <meta
      content="summary_large_image"
      data-rh="true"
      name="twitter:card"
    />
    <meta
      content="@site"
      data-rh="true"
      name="twitter:site"
    />
    <meta
      content="@handle"
      data-rh="true"
      name="twitter:creator"
    />
    <meta
      content="1234567890"
      data-rh="true"
      property="fb:app_id"
    />
    <meta
      content="https://www.url.ie"
      data-rh="true"
      property="og:url"
    />
    <meta
      content="website"
      data-rh="true"
      property="og:type"
    />
    <meta
      content="Open graph title"
      data-rh="true"
      property="og:title"
    />
    <meta
      content="This is testing og:description."
      data-rh="true"
      property="og:description"
    />
    <meta
      content="https://www.test.ie/image-01.jpg"
      data-rh="true"
      property="og:image"
    />
    <meta
      content="Alt text right here"
      data-rh="true"
      property="og:image:alt"
    />
    <meta
      content="800"
      data-rh="true"
      property="og:image:width"
    />
    <meta
      content="600"
      data-rh="true"
      property="og:image:height"
    />
    <meta
      content="https://www.test.ie/image-02.jpg"
      data-rh="true"
      property="og:image"
    />
    <meta
      content="1200"
      data-rh="true"
      property="og:image:width"
    />
    <meta
      content="1200"
      data-rh="true"
      property="og:image:height"
    />
    <meta
      content="https://www.test.ie/image-03.jpg"
      data-rh="true"
      property="og:image"
    />
    <meta
      content="1200"
      data-rh="true"
      property="og:image:width"
    />
    <meta
      content="1200"
      data-rh="true"
      property="og:image:height"
    />
    <meta
      content="https://www.test.ie/image-04.jpg"
      data-rh="true"
      property="og:image"
    />
    <meta
      content="1200"
      data-rh="true"
      property="og:image:width"
    />
    <meta
      content="1200"
      data-rh="true"
      property="og:image:height"
    />
    <meta
      content="en_IE"
      data-rh="true"
      property="og:locale"
    />
    <meta
      content="SiteName"
      data-rh="true"
      property="og:site_name"
    />
  </head>
  <body>
    <div />
  </body>
</html>
`;
